--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 input[type='text']:focus { box-shadow: none; }
+
+.blue-button {
+    background-color: #56c3fc;
+  }
