--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,3 +24,47 @@ input[type="text"]:focus {
 .text-gray {
   color: #23354d;
 }
+
+.text-main{
+  color: #153F4D;
+}
+
+.main-color {
+  /* background-color: #A8D7CD; */
+  /* background-color: #FDE3B2; */
+  /* background-color: #ebd2f3; */
+  background-color:#DCD7FE ;
+  color:#DCD7FE;
+}
+.secondary-color {
+  background-color: #FBD783;
+  color:#FBD783;
+}
+
+.btn-color{
+  /* background-color: #BFCD84; */
+  /* background-color: #FF8A5B; */
+  background-color: #ffc439;
+  /* background-color: #F8E505; */
+  /* color:white */
+}
+.btn-color:hover{
+  background-color: #ffd46f;
+}
+
+
+.input{
+  border-color: #cbd5e1;
+}
+.input:focus{
+  border-color: #ab9eff;
+}
+.input:hover{
+  border-color: #ab9eff;
+}
+
+
+.sec-btn{
+  background-color:#c3baff;
+  color:#1F2937;
+}
