--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,9 +81,9 @@ input[type="text"]:focus {
 }
 
 .bg-home{
-  background-color: #FDDFF9;
+  background-color: #FAF6F4;
 }
 
 .bg-rec{
-  background-color: #D488F4;
+  background-color: #BC9DD3;
 }
