Send Message auto show completed.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ input[type="text"]:focus {
 }
 
 .blue-button {
-  background-color: #56c3fc;
+  background-color: #a287b6;
 }
 .bg-amber {
   background-color: #fbbf24;
