Feat : Loader for User and Provider Details Fetching for better experience

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -114,7 +114,7 @@ input[type="text"]:focus {
 
 .card-btn {
   background-color: #d6bfdb;
-  color: #722a88;
+  color: #acacac;
   transition: ease-in-out 0.3s;
 }
 
