--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,6 @@ input[type="email"]:focus {
   box-shadow: none;
 }
 
-
 .blue-button {
   background-color: #a287b6;
 }
@@ -36,7 +35,7 @@ input[type="email"]:focus {
   /* background-color: #A8D7CD; */
   /* background-color: #FDE3B2; */
   /* background-color: #ebd2f3; */
-  background-color: #d1bee0;
+  background-color: #4a355e;
   color: #dcd7fe;
 }
 
@@ -154,8 +153,8 @@ input[type="email"]:focus {
   color: #6e6362;
 }
 
-.bg-providerItem{
-  background-color: #F5F6FA;
+.bg-providerItem {
+  background-color: #f5f6fa;
 }
 .pr-card {
   background-color: #ffffff;
@@ -183,9 +182,29 @@ input[type="email"]:focus {
 }
 
 .chatbgimage {
-  background-image: url('../../client/src/assets/chatbg.jpg');
+  background-image: url("../../client/src/assets/chatbg.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   object-fit: cover;
+}
+
+.bg-image {
+  background-image: url("../../client/src/assets/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  object-fit: cover;
+}
+
+.blur-drawer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(226, 226, 226, 0.5);
+  backdrop-filter: blur(1px);
+
+  transition: backdrop-filter 0.3s ease;
 }
