Fix : code improvement

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -165,6 +165,12 @@ input[type="email"]:focus {
 .setting-bg {
   background-color: #f1f5f9;
 }
+.home-cardbg {
+  background-color: #fdf8ff;
+}
+.provpage-cardbg {
+  background-color: #fcf5ff;
+}
 
 @keyframes wave {
   0%,
